--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,8 @@ body{
 }
 #contenedor{
     background-color: #fff;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 10%;
+    margin-right: 10%;
     margin-top: 20px;
     display: flex;
     align-items: center;
@@ -24,7 +24,7 @@ body{
     margin-bottom: 20px;
 }
 #contenedor img{
-    width: 280px;
+    width: 25%;
 }
 .presentacion{
     margin-left: 20px;
