--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ h1{
     font-family: 'Montserrat', sans-serif;
     margin-bottom: 10px;
     margin-top: 10px;
+    text-align: center;
 }
 
 body{
@@ -24,7 +25,7 @@ body{
     margin-bottom: 20px;
 }
 #contenedor img{
-    width: 25%;
+    width: 50%;
 }
 .presentacion{
     margin-left: 20px;
